<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_main_title">My Nanodegree Apps!</string>
    <string name="app_spotify_streamer">Spotify Streamer</string>
    <string name="app_super_duo">Super Duo</string>
    <string name="app_super_duo_score">Scores App</string>
    <string name="app_super_duo_library">Library App</string>
    <string name="app_build_it_bigger">Build It Bigger</string>
    <string name="app_xyz_reader">XYZ Reader</string>
    <string name="app_capstone">Capstone: MY OWN APP</string>

</resources>
