<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/app_main_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <Button
            android:id="@+id/app_button_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button_cool"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_cool_primary_light"
            android:text="@string/app_spotify_streamer"
            android:onClick="launchApp"/>

        <Button
            android:id="@+id/app_button_superduo_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button_cool"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_cool_primary_light"
            android:text="@string/app_super_duo_score"
            android:onClick="launchApp"/>

        <Button
            android:id="@+id/app_button_superduo_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_cool_primary_light"
            android:layout_marginBottom="10dp"
            android:background="@drawable/app_button_cool"
            android:text="@string/app_super_duo_library"
            android:onClick="launchApp"/>


        <Button
            android:id="@+id/app_button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_cool_primary_light"
            android:layout_marginBottom="10dp"
            android:background="@drawable/app_button_cool"
            android:text="@string/app_build_it_bigger"
            android:onClick="launchApp"/>


        <Button
            android:id="@+id/app_button_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_cool_primary_light"
            android:background="@drawable/app_button_cool"
            android:text="@string/app_xyz_reader"
            android:onClick="launchApp"/>

        <Button
            android:id="@+id/app_button_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button_warm"
            android:text="@string/app_capstone"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_warm_primary_light"
            android:onClick="launchApp"/>
    </LinearLayout>
</LinearLayout>
